--- a/Struktur Organisasi.html
+++ b/Struktur Organisasi.html
@@ -76,11 +76,11 @@
     <div class="container-fluid">
         <div class="row justify-content-center">
             <div class="col-12 col-md-12 col-lg-12">
-                <div class="carousel slide carousel-fade" id="uhtME9Fkpk" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
+                <div class="carousel slide carousel-fade" id="uhtNmagW5G" data-ride="carousel" data-bs-ride="carousel" data-interval="5000" data-bs-interval="5000">
                     <ol class="carousel-indicators">
-                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#uhtME9Fkpk" data-bs-target="#uhtME9Fkpk"></li>
-                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#uhtME9Fkpk" data-bs-target="#uhtME9Fkpk"></li>
-                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#uhtME9Fkpk" data-bs-target="#uhtME9Fkpk"></li>
+                        <li data-slide-to="0" data-bs-slide-to="0" class="active" data-target="#uhtNmagW5G" data-bs-target="#uhtNmagW5G"></li>
+                        <li data-slide-to="1" data-bs-slide-to="1" data-target="#uhtNmagW5G" data-bs-target="#uhtNmagW5G"></li>
+                        <li data-slide-to="2" data-bs-slide-to="2" data-target="#uhtNmagW5G" data-bs-target="#uhtNmagW5G"></li>
                     </ol>
                     <div class="carousel-inner">
                         <div class="carousel-item slider-image item active">
@@ -102,11 +102,11 @@
                         </div>
                         
                     </div>
-                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#uhtME9Fkpk">
+                    <a class="carousel-control carousel-control-prev" role="button" data-slide="prev" data-bs-slide="prev" href="#uhtNmagW5G">
                         <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Previous</span>
                     </a>
-                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#uhtME9Fkpk">
+                    <a class="carousel-control carousel-control-next" role="button" data-slide="next" data-bs-slide="next" href="#uhtNmagW5G">
                         <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                         <span class="sr-only visually-hidden">Next</span>
                     </a>
